<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/dp_8"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp">
        <ImageView
            android:id="@+id/homepage_Topad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/th_service"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/font_color"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/medical_reportButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="#00000000"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/medical_report_190x190" />

            <TextView
                android:id="@+id/textLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/medical_reportButton"
                android:layout_centerHorizontal="true"
                android:singleLine="true"
                android:text="@string/medical_report"
                android:textColor="@color/font_color"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/shopping_onlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="#00000000"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/shopping_190x190" />

            <TextView
                android:id="@+id/textLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/shopping_onlineButton"
                android:layout_centerHorizontal="true"
                android:singleLine="true"
                android:text="@string/shopping_online"
                android:textColor="@color/font_color"
                android:textSize="14sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/health_infoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="#00000000"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/health_info_190x190" />

            <TextView
                android:id="@+id/textLabel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/health_infoButton"
                android:layout_centerHorizontal="true"
                android:singleLine="true"
                android:text="@string/health_info"
                android:textColor="@color/font_color"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/about_usButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="#00000000"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/about_th_190x190" />

            <TextView
                android:id="@+id/textLabel4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/about_usButton"
                android:layout_centerHorizontal="true"
                android:singleLine="true"
                android:text="@string/about_us"
                android:textColor="@color/font_color"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/appointmentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="#00000000"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/appointment_425x190" />

            <TextView
                android:id="@+id/textLabel5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/appointmentButton"
                android:layout_centerHorizontal="true"
                android:singleLine="true"
                android:text="@string/make_appointment"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/font_color"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/promotionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#00000000"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/promotion_425x190" />

            <TextView
                android:id="@+id/textLabel6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/promotionButton"
                android:layout_centerHorizontal="true"
                android:singleLine="true"
                android:text="@string/promotion"
                android:textColor="@color/font_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>



</LinearLayout>


